# stocker

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  addexisteddialog.cpp  addexisteddialog.h  addnewdialog.cpp  addnewdialog.h  database.cpp  database.h  detaildialog.cpp  detaildialog.h  gui.cpp  gui.fbp  gui.h  mainapp.cpp  mainapp.h  mainframe.cpp  mainframe.h  modifydialog.cpp  modifydialog.h  searchdialog.cpp  searchdialog.h  stockoutdialog.cpp  stockoutdialog.h  zh_CN.mo  zh_CN.po
